# tatneft_task

./: README.md
task_1/: README.md  main.py
task_2/: README.md  main.py  pyproject.toml  requirements.txt
task_3/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  env-example  pyproject.toml  requirements.txt
task_3/api/: exception_handler.py  pagination.py  urls.py
task_3/api/v1/: filters.py  serializers.py  urls.py  views.py
task_3/core/: admin.py  factories.py  models.py  tasks.py  widgets.py
task_3/core/datatools/: __init__.py  data_insert.py  data_receiver.py
task_3/core/migrations/: 0001_initial.py  0002_alter_station_coordinates_alter_station_number.py  0003_alter_station_options_station_created_at_and_more.py
task_3/project/: settings.py  urls.py
task_3/tests/: conftest.py
task_3/tests/test_api/: test_stations.py
task_3/tests/test_core/: test_models.py
